--- a/languages/dibs-easy-for-woocommerce.pot
+++ b/languages/dibs-easy-for-woocommerce.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Nexi Checkout 2.11.3\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/dibs-easy-for-woocommerce\n"
-"POT-Creation-Date: 2025-09-23 09:34:19+00:00\n"
+"POT-Creation-Date: 2025-09-26 09:05:46+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -769,7 +769,7 @@ msgid ""
 msgstr ""
 
 #: includes/nets-easy-settings.php:195
-msgid "Standalone payment methods"
+msgid "Payment method splitting"
 msgstr ""
 
 #: includes/nets-easy-settings.php:196
