--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 *** Nexi Checkout Changelog ***
+2025-10-06  - version 2.12.0
+* Feature   - Payments are now also terminated in Nets as the WooCommerce sessions are cleared, in cases where a new session is needed.
+* Fix       - Added changelog.txt to display plugin version correctly on woocommerce.com.
+* Tweak     - Renamed "Standalone payment methods" feature to "Payment method splitting".
+
 2025-09-23  - version 2.11.3
 * Fix       - The countryCode is now included in checkout requests to Nexi, so only payment options available for the customer's country are displayed.
 * Tweak     - Extended logging for JSON decoding, to improve troubleshooting of unexpected API responses.
