--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 *** Nexi Checkout Changelog ***
+2025-11-17  - version 2.12.1
+* Fix       - Improved support for additional subscription scenarios, including failed renewals, resubscriptions, early renewals, and renewal switches.
+* Fix       - Fixed a compatibility issue with certain themes, which caused the Nexi session to be terminated immediately.
+* Fix       - Updated outdated documentation links to their current URLs.
+
 2025-10-06  - version 2.12.0
 * Feature   - Payments are now also terminated in Nets as the WooCommerce sessions are cleared, in cases where a new session is needed.
 * Fix       - Added changelog.txt to display plugin version correctly on woocommerce.com.
